[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cf"
version = "0.1.0"
description = "core function, , basic need, no api, no connection, best code practice"
readme = "README.rst"
authors = [
  {name = "cf", email = "tyz@1token.trade"}
]
maintainers = [
  {name = "cf", email = "tyz@1token.trade"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/tangyouze/cf/issues"
changelog = "https://github.com/tangyouze/cf/blob/master/changelog.md"
homepage = "https://github.com/tangyouze/cf"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

